<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/bn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bitmap"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/bn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/bn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radial"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/bn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sweep"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/bn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/composite"
            android:layout_weight="1"
            />
    </LinearLayout>
    <com.example.administrator.imagedemo.pin.MyView2
        android:id="@+id/my_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>
